Implement RESTful API WisataKu dengan Prisma dan MariaDB
